# hubris

./: Cargo.toml
app/demo-nrf52833-microbit/: Cargo.toml  README.md  app.toml
app/demo-nrf52833-microbit/src/: main.rs
boards/: nrf52833-microbit.toml
chips/nrf52833/: chip.toml  memory.toml  openocd.cfg
task/microbit-leds/: Cargo.toml
task/microbit-leds/src/: main.rs
