[package]
edition = "2021"
readme = "README.md"
name = "demo-nrf52833-microbit"
version = "0.1.0"

[features]
dump = ["kern/dump"]

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
nrf52833-pac = { workspace = true, features = ["rt"] }

kern = { path = "../../sys/kern" }

# this lets you use `cargo fix`!
[[bin]]
name = "demo-nrf52833-microbit"
test = false
doctest = false
bench = false

[lints]
workspace = true
